--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "webpay/webpay",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Bindings of WebPay API",
   "license": "MIT",
   "authors": [{
@@ -11,6 +11,7 @@
     "email": "tomykaira@webpay.jp"
   }],
   "require": {
+    "php": ">= 5.3.3",
     "guzzle/guzzle": "3.*"
   },
   "autoload": {
